[gd_scene load_steps=3 format=3 uid="uid://imqk2lwi0284"]

[ext_resource type="Script" uid="uid://p6ppyhhr28pu" path="res://scripts/ui/shop/shop_popup.gd" id="1_0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1_1"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="ShopPopup" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1_1")
script = ExtResource("1_0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "  心愿"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "关闭"

[node name="ItemList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ItemList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="VBoxContainer/ItemList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyText" type="Label" parent="VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "金钱：0"

[node name="Spacer" type="Control" parent="VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TotalItems" type="Label" parent="VBoxContainer/Footer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "共 0 件商品"
