# å•†åŸå¼¹çª—è„šæœ¬
extends Panel

# å¯¼å…¥å•†åŸæ•°æ®
const ShopData = preload("res://scripts/data/shop_data.gd")

# ä¿¡å·å®šä¹‰
signal close_pressed

# å¼•ç”¨
@onready var close_button = $VBoxContainer/TitleBar/CloseButton
@onready var items_container = $VBoxContainer/ItemList/ScrollContainer/ItemsContainer
@onready var money_text = $VBoxContainer/Footer/MoneyText
@onready var total_items_text = $VBoxContainer/Footer/TotalItems

# å±æ€§ç³»ç»Ÿå•ä¾‹ï¼ˆé€šè¿‡AutoLoadè‡ªåŠ¨åŠ è½½ï¼‰
@onready var player_attributes = get_node("/root/player_attributes")

# å•†åŸç®¡ç†å™¨å¼•ç”¨ï¼ˆä»çˆ¶èŠ‚ç‚¹è·å–ï¼‰
var shop_manager = null

func _ready():
	# ç»‘å®šä¿¡å·
	close_button.pressed.connect(_on_close_button_pressed)
	
	# æŸ¥æ‰¾å•†åŸç®¡ç†å™¨ï¼ˆä½¿ç”¨find_nodeæ–¹æ³•ï¼‰
	shop_manager = find_shop_manager()
	
	# åˆå§‹åŒ–å•†å“åˆ—è¡¨
	_init_item_list()
	
	# æ›´æ–°UI
	_update_ui()

# æ˜¾ç¤ºå¼¹çª—
func show_popup():
	visible = true
	
	# åˆå§‹åŒ–å•†å“åˆ—è¡¨
	_init_item_list()
	
	# æ›´æ–°UI
	_update_ui()

# éšè—å¼¹çª—
func hide_popup():
	visible = false
	
	# å‘å‡ºå…³é—­ä¿¡å·
	close_pressed.emit()

# è·å–å•†åŸç®¡ç†å™¨çš„ç®€å•æ–¹æ³•
func find_shop_manager() -> Node:
	print("ğŸ” å¼€å§‹è·å–ShopManagerèŠ‚ç‚¹")
	
	# ç›´æ¥é€šè¿‡èŠ‚ç‚¹è·¯å¾„è·å–
	var main_scene = get_node("../..")  # ShopPopup -> SafeArea2D -> mainScene
	if main_scene:
		print("âœ… æ‰¾åˆ°mainSceneèŠ‚ç‚¹ï¼š", main_scene.name)
		
		# ç›´æ¥æŸ¥æ‰¾ShopManager
		if main_scene.has_node("ShopManager"):
			var shop_manager = main_scene.get_node("ShopManager")
			print("âœ… ç›´æ¥æ‰¾åˆ°ShopManagerï¼š", shop_manager.name)
			return shop_manager
		else:
			print("âŒ mainSceneä¸­æ²¡æœ‰ShopManagerèŠ‚ç‚¹")
			# æ‰“å°mainSceneçš„æ‰€æœ‰å­èŠ‚ç‚¹
			print("ğŸ“‹ mainSceneçš„å­èŠ‚ç‚¹æ•°é‡ï¼š", main_scene.get_child_count())
			for child in main_scene.get_children():
				print("   - ", child.name)
			return null
	else:
		print("âŒ æ— æ³•æ‰¾åˆ°mainSceneèŠ‚ç‚¹")
		return null

# æ‰“å°åœºæ™¯æ ‘ç»“æ„çš„è¾…åŠ©å‡½æ•°
func _print_scene_tree(node: Node, depth: int):
	var indent = "  ".repeat(depth)
	print(indent, "- ", node.name)
	for child in node.get_children():
		_print_scene_tree(child, depth + 1)

# å¤–éƒ¨è°ƒç”¨çš„åˆå§‹åŒ–å•†å“åˆ—è¡¨æ–¹æ³•
func init_shop_items():
	# åˆå§‹åŒ–å•†å“åˆ—è¡¨
	_init_item_list()
	# æ›´æ–°UI
	_update_ui()

# åˆå§‹åŒ–å•†å“åˆ—è¡¨
func _init_item_list():
	print("=== åˆå§‹åŒ–å•†å“åˆ—è¡¨å¼€å§‹ ===")
	
	# æ£€æŸ¥å¿…è¦èŠ‚ç‚¹æ˜¯å¦å­˜åœ¨
	if not items_container:
		print("âŒ items_containerä¸å­˜åœ¨")
		return
	else:
		print("âœ… items_containerå­˜åœ¨ï¼š", items_container.name)
		print("   items_containerå¯è§æ€§ï¼š", items_container.visible)
		print("   items_containerå°ºå¯¸ï¼š", items_container.size)
	
	if not total_items_text:
		print("âŒ total_items_textä¸å­˜åœ¨")
		return
	else:
		print("âœ… total_items_textå­˜åœ¨ï¼š", total_items_text.name)
	
	# æ¸…é™¤ç°æœ‰å•†å“é¡¹
	print("ğŸ“‹ æ¸…é™¤ç°æœ‰å•†å“é¡¹ï¼Œå½“å‰å­èŠ‚ç‚¹æ•°é‡ï¼š", len(items_container.get_children()))
	for child in items_container.get_children():
		child.queue_free()
	print("ğŸ“‹ æ¸…é™¤åå­èŠ‚ç‚¹æ•°é‡ï¼š", len(items_container.get_children()))
	
	# æ£€æŸ¥shop_manageræ˜¯å¦å­˜åœ¨
	if shop_manager == null:
		print("ğŸ” shop_managerä¸ºnullï¼Œé‡æ–°æŸ¥æ‰¾")
		shop_manager = find_shop_manager()
	
	if not shop_manager:
		print("âŒ shop_managerè·å–å¤±è´¥")
		return
	else:
		print("âœ… shop_managerè·å–æˆåŠŸï¼š", shop_manager.name)
	
	# è·å–æ‰€æœ‰å•†å“æ•°æ®
	var items = shop_manager.get_all_items()
	print("ğŸ“¦ è·å–åˆ°å•†å“æ•°é‡ï¼š", len(items))
	if len(items) > 0:
		print("ğŸ“‹ å•†å“åˆ—è¡¨ç¤ºä¾‹ï¼š")
		for i in range(min(3, len(items))):
			print("   ", i+1, ". ", items[i]["name"], " (", items[i]["price"], "é‡‘å¸")
	
	# åŠ¨æ€ç”Ÿæˆå•†å“é¡¹
	var added_count = 0
	for item in items:
		print("â• æ·»åŠ å•†å“ï¼š", item["name"])
		_add_item_to_list(item)
		added_count += 1
	
	# æ›´æ–°å•†å“æ€»æ•°
	total_items_text.text = "å…± %d ä»¶å•†å“" % len(items)
	print("ğŸ“Š å•†å“æ€»æ•°å·²æ›´æ–°ä¸ºï¼š", total_items_text.text)
	print("âœ… å•†å“åˆ—è¡¨åˆå§‹åŒ–å®Œæˆï¼Œå…±æ·»åŠ  %d ä»¶å•†å“" % added_count)
	print("   items_containerå½“å‰å­èŠ‚ç‚¹æ•°é‡ï¼š", len(items_container.get_children()))
	print("=== åˆå§‹åŒ–å•†å“åˆ—è¡¨ç»“æŸ ===")

# å·²è´­ä¹°å•†å“IDé›†åˆ
var purchased_items = []

# æ·»åŠ å•†å“é¡¹åˆ°åˆ—è¡¨
func _add_item_to_list(item: Dictionary):
	print("=== æ·»åŠ å•†å“é¡¹å¼€å§‹ ===")
	print("å•†å“IDï¼š", item["id"])
	print("å•†å“åç§°ï¼š", item["name"])
	
	# åˆ›å»ºå•†å“é¡¹å®¹å™¨
	var item_container = HBoxContainer.new()
	item_container.name = item["id"]
	item_container.add_theme_constant_override("separation", 10)
	item_container.size_flags_horizontal = 3  # FILL
	item_container.size_flags_vertical = 1  # SHRINK_CENTER
	item_container.visible = true
	print("âœ… åˆ›å»ºå•†å“é¡¹å®¹å™¨ï¼š", item_container.name)
	
	# åˆ›å»ºåç§°æ ‡ç­¾
	var name_label = Label.new()
	name_label.text = "  " + item["name"]  # å‰é¢å¢åŠ 2ä¸ªç©ºæ ¼
	name_label.horizontal_alignment = 1  # 1è¡¨ç¤ºæ°´å¹³å±…ä¸­å¯¹é½
	name_label.vertical_alignment = 1  # 1è¡¨ç¤ºå‚ç›´å±…ä¸­å¯¹é½
	name_label.size_flags_horizontal = 1  # EXPAND_FILL
	name_label.add_theme_font_size_override("font_size", 20)
	name_label.visible = true
	item_container.add_child(name_label)
	print("âœ… æ·»åŠ åç§°æ ‡ç­¾ï¼š", name_label.text)
	
	# åˆ›å»ºä»·æ ¼æ ‡ç­¾
	var price_label = Label.new()
	price_label.text = "  Â¥%d" % item["price"]  # å‰é¢å¢åŠ 2ä¸ªç©ºæ ¼
	price_label.horizontal_alignment = 1  # 1è¡¨ç¤ºæ°´å¹³å±…ä¸­å¯¹é½
	price_label.vertical_alignment = 1  # 1è¡¨ç¤ºå‚ç›´å±…ä¸­å¯¹é½
	price_label.size_flags_horizontal = 1  # EXPAND_FILL
	price_label.add_theme_font_size_override("font_size", 20)
	price_label.visible = true
	item_container.add_child(price_label)
	print("âœ… æ·»åŠ ä»·æ ¼æ ‡ç­¾ï¼š", price_label.text)
	
	# åˆ›å»ºæ•ˆæœæ ‡ç­¾
	var effect_label = Label.new()
	effect_label.text = item["description"]
	effect_label.horizontal_alignment = 1  # 1è¡¨ç¤ºæ°´å¹³å±…ä¸­å¯¹é½
	effect_label.vertical_alignment = 1  # 1è¡¨ç¤ºå‚ç›´å±…ä¸­å¯¹é½
	effect_label.size_flags_horizontal = 1  # EXPAND_FILL
	effect_label.add_theme_font_size_override("font_size", 16)
	effect_label.autowrap_mode = 0  # 0è¡¨ç¤ºä¸è‡ªåŠ¨æ¢è¡Œ
	effect_label.visible = true
	effect_label.size_flags_vertical = 1  # SHRINK_CENTER
	item_container.add_child(effect_label)
	print("âœ… æ·»åŠ æ•ˆæœæ ‡ç­¾ï¼š", effect_label.text)
	
	# æ·»åŠ SpacerèŠ‚ç‚¹ï¼Œå¡«å……å‰©ä½™ç©ºé—´ï¼Œå°†è´­ä¹°æŒ‰é’®æ¨åˆ°å³ä¾§
	var spacer = Control.new()
	spacer.size_flags_horizontal = 3  # FILL
	spacer.visible = true
	item_container.add_child(spacer)
	print("âœ… æ·»åŠ SpacerèŠ‚ç‚¹")
	
	# åˆ›å»ºè´­ä¹°æŒ‰é’®
	var buy_button = Button.new()
	buy_button.text = "  è´­ä¹°"  # å‰é¢å¢åŠ 2ä¸ªç©ºæ ¼
	buy_button.custom_minimum_size = Vector2(100, 50)  # å¢å¤§æŒ‰é’®å°ºå¯¸ï¼Œé€‚åˆç§»åŠ¨ç«¯è§¦æ‘¸
	buy_button.add_theme_font_size_override("font_size", 20)
	# ç¡®ä¿æŒ‰é’®ä½¿ç”¨é»˜è®¤çš„æŒ‰é’®è¡Œä¸ºï¼Œè‡ªåŠ¨æ¢å¤çŠ¶æ€
	buy_button.toggle_mode = false
	buy_button.button_pressed = false
	
	# æ£€æŸ¥å•†å“æ˜¯å¦å·²è´­ä¹°
	if item["id"] in purchased_items:
		buy_button.text = "  å·²è´­ä¹°"
		buy_button.disabled = true
		buy_button.modulate = Color(0.5, 0.5, 0.5)  # ç°è‰²æ˜¾ç¤º
	else:
		# ç»‘å®šè´­ä¹°äº‹ä»¶
		buy_button.pressed.connect(func(): _on_buy_button_pressed(item["id"], buy_button))
	
	item_container.add_child(buy_button)
	print("âœ… æ·»åŠ è´­ä¹°æŒ‰é’®ï¼š", buy_button.text)
	
	# åœ¨è´­ä¹°æŒ‰é’®å³ä¾§æ·»åŠ å›ºå®šå®½åº¦çš„ControlèŠ‚ç‚¹ï¼Œæ¨¡æ‹Ÿ6ä¸ªç©ºæ ¼çš„å®½åº¦
	var right_margin = Control.new()
	right_margin.custom_minimum_size = Vector2(30, 0)  # ä½¿ç”¨å±æ€§è®¾ç½®æœ€å°å®½åº¦ï¼Œå¤§çº¦6ä¸ªç©ºæ ¼çš„å®½åº¦
	right_margin.visible = true
	item_container.add_child(right_margin)
	print("âœ… æ·»åŠ å³ä¾§è¾¹è·")
	
	# æ·»åŠ åˆ°å®¹å™¨
	items_container.add_child(item_container)
	print("âœ… å•†å“é¡¹æ·»åŠ åˆ°å®¹å™¨")
	print("   å•†å“é¡¹å­èŠ‚ç‚¹æ•°é‡ï¼š", len(item_container.get_children()))
	print("   æ·»åŠ åå®¹å™¨å­èŠ‚ç‚¹æ•°é‡ï¼š", len(items_container.get_children()))
	print("=== æ·»åŠ å•†å“é¡¹å®Œæˆ ===")

# å…³é—­æŒ‰é’®ç‚¹å‡»äº‹ä»¶
func _on_close_button_pressed():
	hide_popup()

# è´­ä¹°æŒ‰é’®ç‚¹å‡»äº‹ä»¶
func _on_buy_button_pressed(item_id: String, buy_button: Button = null):
	# è°ƒç”¨å•†åŸç®¡ç†å™¨è´­ä¹°å•†å“
	var success = shop_manager.purchase_item(item_id)
	
	# è´­ä¹°æˆåŠŸåæ›´æ–°æŒ‰é’®çŠ¶æ€
	if success and buy_button:
		# å°†å•†å“æ·»åŠ åˆ°å·²è´­ä¹°åˆ—è¡¨
		purchased_items.append(item_id)
		# æ›´æ–°æŒ‰é’®çŠ¶æ€
		buy_button.text = "  å·²è´­ä¹°"
		buy_button.disabled = true
		buy_button.modulate = Color(0.5, 0.5, 0.5)  # ç°è‰²æ˜¾ç¤º
		print("âœ… å•†å“è´­ä¹°æˆåŠŸï¼ŒæŒ‰é’®çŠ¶æ€å·²æ›´æ–°ï¼š", item_id)
	
	# æ— è®ºæˆåŠŸä¸å¦ï¼Œéƒ½æ›´æ–°UI
	_update_ui()

# æ›´æ–°UI
func _update_ui():
	# æ£€æŸ¥å¿…è¦èŠ‚ç‚¹æ˜¯å¦å­˜åœ¨
	if not money_text:
		return
	
	# æ£€æŸ¥player_attributesæ˜¯å¦å­˜åœ¨
	if not player_attributes:
		print("é”™è¯¯ï¼šplayer_attributesä¸å­˜åœ¨")
		return
	
	# æ›´æ–°é‡‘é’±æ˜¾ç¤º
	var money = player_attributes.get_money()
	money_text.text = "é‡‘é’±ï¼š%d" % money
	
	# æ›´æ–°å•†å“åˆ—è¡¨ï¼ˆå¦‚æœéœ€è¦åŠ¨æ€åˆ·æ–°ï¼‰
	# _init_item_list()

# å½“å¼¹çª—å¯è§æ€§å˜åŒ–æ—¶æ›´æ–°UI
func _on_visibility_changed():
	if visible:
		_update_ui()
